Ozhaev Zaynudin Sharik2.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:94:27: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
             float Dx = x1 - x2;
                           ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:95:22: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
        float Dy = y1 - y2;
                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:96:34: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:96:46: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:96:51: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:100:21: error: 'dx2' was not declared in this scope
         float Vn1 = dx2*s + dy2*e;
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:100:29: error: 'dy2' was not declared in this scope
         float Vn1 = dx2*s + dy2*e;
                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:101:21: error: 'dx1' was not declared in this scope
         float Vn2 = dx1*s + dy1*e;
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:101:29: error: 'dy1' was not declared in this scope
         float Vn2 = dx1*s + dy1*e;
                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:102:15: warning: declaration of 'dt' shadows a previous local [-Wshadow]
         float dt = (r2+r1-d)/(Vn1-Vn2);
               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:21:9: warning: shadowed declaration is here [-Wshadow]
     int dt = 1;
         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:102:23: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         float dt = (r2+r1-d)/(Vn1-Vn2);
                       ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:103:26: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         if (dt > 0.6) dt = 0.6;
                          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:104:27: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         if (dt < -0.6) dt = -0.6;
                           ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:109:17: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         Dx = x1 - x2;
                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:110:17: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
         Dy = y1 - y2;
                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:111:29: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:111:41: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:111:46: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp:21:9: warning: unused variable 'dt' [-Wunused-variable]
     int dt = 1;
         ^
---------------------------------------------------------------------------------------------
[09.06.2021 17:25:57,28 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik2.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
